# omrs-ai-playground

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  build-custom-images.sh  build-image.sh  config.yaml  get-cli.sh  index.html  mk.sh  setup-rag.sh
docs/: AUGMENTED-RAG.md  AUGMENTED_RAG_IMPLEMENTATION_PLAN.md  README.md  synthetic-data.md
projects/med-agent-hub/: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.server  Procfile.dev  README.md  client-entrypoint.sh  env.recommended  explore_a2a.py  launch_a2a_agents.py  nginx.conf  pyproject.toml  start_server.sh  test_a2a_sdk.py  test_config.py  test_models_direct.py  test_router_a2a.py
projects/med-agent-hub/client/: index.html  script.js  style.css
projects/med-agent-hub/docs/: docs.md
projects/med-agent-hub/docs/architecture/: agents.md  overview.md
projects/med-agent-hub/docs/development/: creating-agents.md
projects/med-agent-hub/docs/getting-started/: configuration.md  lm-studio.md
projects/med-agent-hub/server/: config.py  llm_clients.py  main.py  schemas.py
projects/med-agent-hub/server/agent_cards/: clinical.json  medgemma.json  router.json
projects/med-agent-hub/server/sdk_agents/: __init__.py  clinical_executor.py  clinical_server.py  dispatch_executor.py  medgemma_executor.py  medgemma_server.py  react_router_executor.py  router_executor.py  router_server.py
projects/med-agent-hub/web/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
projects/med-agent-hub/web/src/: App.svelte  main.ts  styles.css
utils/: config-utils.sh  (+1 more)
(+59 files in other folders)
